--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -406,6 +406,10 @@
 			"autoClose": {
 				"label": "Rooのタブを自動的に閉じる",
 				"description": "有効にすると、ファイルの変更を含むタスクが完了または取り消された時に、Rooが開いたタブ（差分ビューや開いたファイルなど）を自動的に閉じます。"
+			},
+			"autoCloseAll": {
+				"label": "Rooが触れたすべてのタブを自動的に閉じる",
+				"description": "有効にすると（そして上記の設定も有効になっている場合）、Rooはファイル変更タスク中に操作したすべてのタブ（タスク開始前にすでに開いていたタブを含む）を自動的に閉じます。"
 			}
 		}
 	},
