--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -406,6 +406,10 @@
 			"autoClose": {
 				"label": "Roo 탭 자동 닫기",
 				"description": "활성화 시 Roo는 파일 수정이 포함된 작업이 완료되거나 취소될 때 자동으로 열었던 탭(차이점 보기, 열린 파일 등)을 닫습니다."
+			},
+			"autoCloseAll": {
+				"label": "Roo가 수정한 모든 탭 자동 닫기",
+				"description": "활성화 시 (그리고 위의 설정도 활성화된 경우), Roo는 파일 수정 작업 중에 상호 작용한 모든 탭(작업 시작 전에 이미 열려 있던 탭 포함)을 자동으로 닫습니다."
 			}
 		}
 	},
