--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -406,6 +406,10 @@
 			"autoClose": {
 				"label": "Автоматически закрывать вкладки Roo",
 				"description": "Если включено, Roo будет автоматически закрывать открытые им вкладки (такие как просмотр изменений и открытые файлы), когда задача, включающая модификацию файлов, завершается или отменяется."
+			},
+			"autoCloseAll": {
+				"label": "Автоматически закрывать все вкладки, затронутые Roo",
+				"description": "Если включено (и предыдущая настройка также включена), Roo будет автоматически закрывать все вкладки, с которыми он взаимодействовал во время задачи модификации файлов, включая те, которые были открыты до начала задачи."
 			}
 		}
 	},
