--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -406,6 +406,10 @@
 			"autoClose": {
 				"label": "自动关闭Roo打开的标签页",
 				"description": "启用后，Roo会在涉及文件修改的任务完成或回退时自动关闭它自己打开的标签页（如差异视图、打开的文件）。"
+			},
+			"autoCloseAll": {
+				"label": "自动关闭所有Roo操作过的标签页",
+				"description": "启用后（且上述设置也已启用），Roo将在涉及文件修改的任务完成或回滚时，自动关闭所有在此任务中交互过的标签页，包括任务开始前已打开的标签页。"
 			}
 		}
 	},
