--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -406,6 +406,10 @@
 			"autoClose": {
 				"label": "自動關閉 Roo 開啟的分頁",
 				"description": "啟用後，Roo 會在涉及檔案修改的任務完成或復原時，自動關閉它開啟的分頁（如差異檢視、開啟的檔案）。"
+			},
+			"autoCloseAll": {
+				"label": "自動關閉所有 Roo 操作過的分頁",
+				"description": "啟用後（且上述設定也已啟用），Roo 將在涉及檔案修改的任務完成或復原時，自動關閉所有在此任務中互動過的分頁，包括任務開始前已開啟的分頁。"
 			}
 		}
 	},
