--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -406,6 +406,10 @@
 			"autoClose": {
 				"label": "Roo टैब स्वचालित रूप से बंद करें",
 				"description": "जब सक्षम किया जाता है, तो Roo उन सभी टैब को स्वचालित रूप से बंद कर देगा जिन्हें इसने खोला है (जैसे डिफ व्यू और खुली फ़ाइलें) जब फ़ाइल संशोधन वाला कार्य पूरा हो जाता है या वापस लिया जाता है।"
+			},
+			"autoCloseAll": {
+				"label": "Roo द्वारा छुए गए सभी टैब स्वचालित रूप से बंद करें",
+				"description": "जब सक्षम किया जाता है (और उपरोक्त सेटिंग भी सक्षम है), तो Roo उन सभी टैब को स्वचालित रूप से बंद कर देगा जिनके साथ इसने फ़ाइल संशोधन कार्य के दौरान इंटरैक्ट किया था, जिसमें वे टैब भी शामिल हैं जो कार्य शुरू होने से पहले ही खुले थे।"
 			}
 		}
 	},
