feat: Implement context condensing enhancements

--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -403,6 +403,14 @@
 	},
 	"experimental": {
 		"warning": "⚠️",
+		"condensingApiConfig": {
+			"label": "संदर्भ संघनन API कॉन्फ़िगरेशन",
+			"description": "संदर्भ संघनन के लिए उपयोग करने के लिए API कॉन्फ़िगरेशन चुनें। डिफ़ॉल्ट रूप से वर्तमान API कॉन्फ़िगरेशन का उपयोग करता है।"
+		},
+		"customCondensingPrompt": {
+			"label": "कस्टम संदर्भ संघनन प्रॉम्प्ट",
+			"description": "संदर्भ संघनन के लिए कस्टम सिस्टम प्रॉम्प्ट। डिफ़ॉल्ट प्रॉम्प्ट का उपयोग करने के लिए खाली छोड़ें।"
+		},
 		"autoCondenseContextPercent": {
 			"label": "बुद्धिमान संदर्भ संघनन को ट्रिगर करने की सीमा",
 			"description": "जब संदर्भ विंडो इस सीमा तक पहुंचती है, तो Roo इसे स्वचालित रूप से संघनित कर देगा।"
