--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -403,6 +403,14 @@
 	},
 	"experimental": {
 		"warning": "⚠️",
+		"condensingApiConfig": {
+			"label": "Конфигурация API сжатия контекста",
+			"description": "Выберите профиль конфигурации API для использования при сжатии контекста. По умолчанию используется текущий профиль API."
+		},
+		"customCondensingPrompt": {
+			"label": "Пользовательская подсказка для сжатия контекста",
+			"description": "Пользовательская системная подсказка для сжатия контекста. Оставьте пустым, чтобы использовать подсказку по умолчанию."
+		},
 		"autoCondenseContextPercent": {
 			"label": "Порог для запуска интеллектуального сжатия контекста",
 			"description": "Когда контекстное окно достигает этого порога, Roo автоматически его сожмёт."
