--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -403,6 +403,14 @@
 	},
 	"experimental": {
 		"warning": "⚠️",
+		"condensingApiConfig": {
+			"label": "컨텍스트 압축 API 구성",
+			"description": "컨텍스트 압축에 사용할 API 구성 프로필을 선택합니다. 기본적으로 현재 API 구성을 사용합니다."
+		},
+		"customCondensingPrompt": {
+			"label": "사용자 지정 컨텍스트 압축 프롬프트",
+			"description": "컨텍스트 압축을 위한 사용자 지정 시스템 프롬프트입니다. 기본 프롬프트를 사용하려면 비워 두세요."
+		},
 		"autoCondenseContextPercent": {
 			"label": "지능적 컨텍스트 압축을 트리거하는 임계값",
 			"description": "컨텍스트 창이 이 임계값에 도달하면 Roo가 자동으로 압축합니다."
