--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -403,6 +403,14 @@
 	},
 	"experimental": {
 		"warning": "⚠️",
+		"condensingApiConfig": {
+			"label": "Configuração da API de Condensação de Contexto",
+			"description": "Escolha o perfil de configuração da API a ser usado para a condensação de contexto. O padrão é o perfil de API atual."
+		},
+		"customCondensingPrompt": {
+			"label": "Prompt Personalizado de Condensação de Contexto",
+			"description": "Prompt de sistema personalizado para condensação de contexto. Deixe em branco para usar o prompt padrão."
+		},
 		"autoCondenseContextPercent": {
 			"label": "Limite para acionar a condensação inteligente de contexto",
 			"description": "Quando a janela de contexto atingir este limite, o Roo a condensará automaticamente."
