--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -412,7 +412,7 @@
 			"label": "自訂上下文壓縮提示",
 			"description": "自訂用於上下文壓縮的系統提示。留空則使用預設提示。",
 			"placeholder": "Enter your custom condensing prompt here...\n\nYou can use the same structure as the default prompt:\n- Previous Conversation\n- Current Work\n- Key Technical Concepts\n- Relevant Files and Code\n- Problem Solving\n- Pending Tasks and Next Steps",
-			"reset": "Reset to Default",
+			"reset": "重設為預設值",
 			"hint": "Empty = use default prompt"
 		},
 		"autoCondenseContextPercent": {
