--- a/src/i18n/locales/en/tools.json
+++ b/src/i18n/locales/en/tools.json
@@ -8,6 +8,6 @@
 	},
 	"toolRepetitionLimitReached": "Roo appears to be stuck in a loop, attempting the same action ({{toolName}}) repeatedly. This might indicate a problem with its current strategy. Consider rephrasing the task, providing more specific instructions, or guiding it towards a different approach.",
 	"codebaseSearch": {
-		"approval": "Searching for '{{query}}' in codebase (limit: {{limit}})..."
+		"approval": "Searching for '{{query}}' in codebase..."
 	}
 }
