chore(marketplace): finishing touches (#14)
* fix(marketplace): done should redirect to browse

* test(marketplace): update outdated tests

* refactor(marketplace): handle opening in non-workspace

* feat(marketplace): put behind a feature flag

* fix(marketplace): missing translations

* fix: solve lint errors, make build-able

* fix: use `cwd` instead of `filePaths` for ws detection

* fix(marketplace): should dedupe items with same id from multiple registries

* fix: tab cycle should not reach hidden content

* fix: `mcp` filter

---------

Co-authored-by: NamesMT <dangquoctrung123@gmail.com>

--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -30,7 +30,7 @@
 		"terminal": "Terminal",
 		"experimental": "Experimental",
 		"language": "Idioma",
-		"about": "Sobre"
+		"about": "Sobre Roo Code"
 	},
 	"codeIndex": {
 		"title": "Indexação de Código",
@@ -469,6 +469,11 @@
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Usar ferramenta diff de múltiplos blocos experimental",
 			"description": "Quando ativado, o Roo usará a ferramenta diff de múltiplos blocos. Isso tentará atualizar vários blocos de código no arquivo em uma única solicitação."
+		},
+		"MARKETPLACE": {
+			"name": "Ativar Marketplace no Roo Code",
+			"description": "Quando ativado, o Roo poderá instalar e gerenciar itens do Marketplace.",
+			"warning": "O Marketplace ainda não está ativado. Se você quiser ser um adotante inicial, ative-o nas Configurações experimentais."
 		}
 	},
 	"promptCaching": {
