--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -469,6 +469,11 @@
 			"placeholder": "Enter your custom condensing prompt here...\n\nYou can use the same structure as the default prompt:\n- Previous Conversation\n- Current Work\n- Key Technical Concepts\n- Relevant Files and Code\n- Problem Solving\n- Pending Tasks and Next Steps",
 			"reset": "Reset to Default",
 			"hint": "Empty = use default prompt"
+		},
+		"MARKETPLACE": {
+			"name": "Habilitar Marketplace a Roo Code",
+			"description": "Quan està habilitat, Roo podrà instal·lar i gestionar elements del Marketplace.",
+			"warning": "El Marketplace encara no està habilitat. Si voleu ser un dels primers a adoptar-lo, activeu-lo a la configuració experimental."
 		}
 	},
 	"promptCaching": {
