--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -30,7 +30,7 @@
 		"terminal": "Terminal",
 		"experimental": "Thử nghiệm",
 		"language": "Ngôn ngữ",
-		"about": "Giới thiệu"
+		"about": "Giới thiệu Roo Code"
 	},
 	"codeIndex": {
 		"title": "Lập chỉ mục mã nguồn",
@@ -469,6 +469,11 @@
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Sử dụng công cụ diff đa khối thử nghiệm",
 			"description": "Khi được bật, Roo sẽ sử dụng công cụ diff đa khối. Điều này sẽ cố gắng cập nhật nhiều khối mã trong tệp trong một yêu cầu."
+		},
+		"MARKETPLACE": {
+			"name": "Bật Marketplace trong Roo Code",
+			"description": "Khi được bật, Roo sẽ có thể cài đặt và quản lý các mục từ Marketplace.",
+			"warning": "Marketplace chưa được bật. Nếu bạn muốn trở thành người dùng sớm, vui lòng bật nó trong Cài đặt thử nghiệm."
 		}
 	},
 	"promptCaching": {
