feat: Add custom model dimension support and improve codebase indexing
- Add custom embedding dimension configuration for unknown models
- Fix Ollama API implementation to use correct prompt-based structure
- Enhance OpenAI embedder with base URL and dimension support
- Improve UI with provider-specific settings and better model management
- Add comprehensive VSCode settings for codebase indexing feature

**Core Changes:**
- Add `codebaseIndexEmbedderDimension` field to schemas and config
- Implement proper dimension validation and fallback logic
- Support manual dimension override for custom/unknown models

**API Fixes:**
- Fix Ollama embedder to use individual `prompt` requests instead of batch `input`
- Correct response parsing to use `embedding` (singular) field
- Add OpenAI base URL support for proxies and Azure endpoints
- Implement dimension parameter for OpenAI embedding requests

**UI Improvements:**
- Reorganize settings with provider-specific sections
- Replace model dropdown with flexible text input
- Add dimension input field with validation
- Improve placeholder text and help descriptions
- Add OpenAI base URL configuration field

**Configuration:**
- Add VSCode settings for all codebase indexing options
- Enhance config manager with proper dimension handling
- Improve service factory with better error messages
- Add comprehensive validation for custom models

--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -44,6 +44,17 @@
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Select model",
 		"ollamaUrlLabel": "Ollama URL:",
+		"ollamaUrlPlaceholder": "e.g., http://localhost:11434",
+		"modelIdPlaceholder": "Leave empty for default (e.g., text-embedding-3-small)",
+		"modelIdDescription": "Available models depend on your provider and configuration.",
+		"openaiDefaults": "Defaults:",
+		"ollamaDefaults": "Common:",
+		"dimensionLabel": "Custom Model Dimension (Optional)",
+		"dimensionPlaceholder": "e.g., 1536. Only needed if model is not recognized.",
+		"dimensionDescription": "Specify the embedding dimension only if using a custom model ID not listed in the defaults.",
+		"openaiKeyPlaceholder": "Enter your OpenAI API key",
+		"openaiUrlLabel": "OpenAI Base URL (Optional)",
+		"openaiUrlPlaceholder": "e.g., https://my-proxy.com/v1 or Azure endpoint",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant Key:",
 		"startIndexingButton": "Start Indexing",
